chore: migrate dataspace globalconf from v3 to v4.